# Yellow-River-GeoAgent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
docs/: architecture.md
src/yellow_river_geoagent/: __init__.py  main.py
src/yellow_river_geoagent/api/: __init__.py
src/yellow_river_geoagent/api/routes/: agent.py  map.py
src/yellow_river_geoagent/core/: errors.py  settings.py
src/yellow_river_geoagent/domain/: __init__.py  models.py  schemas.py
src/yellow_river_geoagent/infrastructure/geospatial/: __init__.py  datasource.py
src/yellow_river_geoagent/infrastructure/llm/: __init__.py  client.py
src/yellow_river_geoagent/services/: agent_service.py  map_service.py
tests/: test_smoke.py
